force-app/main/default/objects/Account/fields/Accept_Donations__c.field-meta.xml
<CustomField>
    <fullName>Accept_Donations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can accept donations of used baby gear</label>
    <type>Checkbox</type>
</CustomField>