force-app/main/default/objects/Account/fields/Areas_Served__c.field-meta.xml
<CustomField>
    <fullName>Areas_Served__c</fullName>
    <inlineHelpText>Include Cities, Counties, or other jurisdictions served.</inlineHelpText>
    <label>Areas Served</label>
    <type>TextArea</type>
</CustomField>