force-app/main/default/objects/Account/fields/Counties_Served__c.field-meta.xml
<CustomField>
    <fullName>Counties_Served__c</fullName>
    <label>Counties Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>