force-app/main/default/objects/Account/fields/Enrolled_By__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolled By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts Enrolled</relationshipLabel>
    <relationshipName>Accounts_Enrolled</relationshipName>
    <type>Lookup</type>
</CustomField>