force-app/main/default/objects/Account/fields/Executive_Director__c.field-meta.xml
<CustomField>
    <fullName>Executive_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Orgs (Executive Director)</relationshipLabel>
    <relationshipName>Partner_Orgs1</relationshipName>
    <type>Lookup</type>
</CustomField>