force-app/main/default/objects/Account/fields/Executive_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Executive_Director_Email__c</fullName>
    <formula>Executive_Director__r.Email</formula>
    <label>Executive Director Email</label>
    <type>Text</type>
</CustomField>