force-app/main/default/objects/Account/fields/Families_Receiving_Support__c.field-meta.xml
<CustomField>
    <fullName>Families_Receiving_Support__c</fullName>
    <inlineHelpText>Estimated number of children receiving support from WeeCycle through this organization in current calendar year.</inlineHelpText>
    <label>Children Receiving Support</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>