force-app/main/default/objects/Account/fields/is501c3__c.field-meta.xml
<CustomField>
    <fullName>is501c3__c</fullName>
    <formula>IF(Organization_Type__c == &#39;501(c)3&#39;, true, false)</formula>
    <label>Is 501c3</label>
    <type>Checkbox</type>
</CustomField>