force-app/main/default/objects/Account/fields/Items_Most_Needed__c.field-meta.xml
<CustomField>
    <fullName>Items_Most_Needed__c</fullName>
    <inlineHelpText>Items and quantities needed most</inlineHelpText>
    <label>Items Most Needed</label>
    <type>TextArea</type>
</CustomField>