force-app/main/default/objects/Account/fields/Latest_Liability_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Latest_Liability_Waiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Liability Waiver</label>
    <referenceTo>Partner_Agreement__c</referenceTo>
    <relationshipLabel>Accounts (Latest Liability Waiver)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>