force-app/main/default/objects/Account/fields/Latest_Liability_Waiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_Liability_Waiver_Name__c</fullName>
    <formula>Latest_Liability_Waiver__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Liability Waiver Name</label>
    <type>Text</type>
</CustomField>