force-app/main/default/objects/Account/fields/Latest_Liability_Waiver_Signed__c.field-meta.xml
<CustomField>
    <fullName>Latest_Liability_Waiver_Signed__c</fullName>
    <formula>NOT(ISBLANK(Latest_Liability_Waiver_Signed_Date__c))</formula>
    <label>Latest Liability Waiver Signed?</label>
    <type>Checkbox</type>
</CustomField>