force-app/main/default/objects/Account/fields/Latest_Liability_Waiver_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Liability_Waiver_Signed_Date__c</fullName>
    <formula>Latest_Liability_Waiver__r.Date_Signed_By_Partner__c</formula>
    <label>Latest Liability Waiver Signed Date</label>
    <type>DateTime</type>
</CustomField>