force-app/main/default/objects/Account/fields/Latest_Liability_Waiver_Title__c.field-meta.xml
<CustomField>
    <fullName>Latest_Liability_Waiver_Title__c</fullName>
    <formula>Latest_Liability_Waiver__r.Title__c</formula>
    <label>Latest Liability Waiver Title</label>
    <type>Text</type>
</CustomField>