force-app/main/default/objects/Account/fields/Latest_Partner_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Latest_Partner_Agreement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Latest Partner Agreement</label>
    <referenceTo>Partner_Agreement__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>