force-app/main/default/objects/Account/fields/Latest_Partner_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_Partner_Agreement_Name__c</fullName>
    <formula>Latest_Partner_Agreement__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Partner Agreement Name</label>
    <type>Text</type>
</CustomField>