force-app/main/default/objects/Account/fields/Latest_Partner_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Latest_Partner_Agreement_Signed__c</fullName>
    <formula>NOT(ISBLANK(Latest_Partner_Agreement_Signed_Date__c))</formula>
    <label>Latest Partner Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>