force-app/main/default/objects/Account/fields/Latest_Partner_Agreement_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Partner_Agreement_Signed_Date__c</fullName>
    <formula>Latest_Partner_Agreement__r.Date_Signed_By_Partner__c</formula>
    <label>Latest Partner Agreement Signed Date</label>
    <type>DateTime</type>
</CustomField>