force-app/main/default/objects/Account/fields/Latest_Partner_Agreement_Title__c.field-meta.xml
<CustomField>
    <fullName>Latest_Partner_Agreement_Title__c</fullName>
    <formula>Latest_Partner_Agreement__r.Title__c</formula>
    <label>Latest Partner Agreement Title</label>
    <type>Text</type>
</CustomField>