force-app/main/default/objects/Account/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <inlineHelpText>501(c)3 or otherwise</inlineHelpText>
    <label>Organization Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>