force-app/main/default/objects/Account/fields/Other_Info__c.field-meta.xml
<CustomField>
    <fullName>Other_Info__c</fullName>
    <label>Other Info</label>
    <type>TextArea</type>
</CustomField>