force-app/main/default/objects/Account/fields/Partner_Join_Year__c.field-meta.xml
<CustomField>
    <fullName>Partner_Join_Year__c</fullName>
    <label>Partner Join Year</label>
    <type>Date</type>
</CustomField>