force-app/main/default/objects/Account/fields/Pick_Up_Items__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can pick up items from warehouse</label>
    <type>Checkbox</type>
</CustomField>