force-app/main/default/objects/Account/fields/Renewed_By__c.field-meta.xml
<CustomField>
    <fullName>Renewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Renewed By)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>