force-app/main/default/objects/Account/fields/Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Date__c</fullName>
    <label>Renewed Date</label>
    <type>DateTime</type>
</CustomField>