force-app/main/default/objects/Account/fields/Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Restrictions__c</fullName>
    <label>Restrictions</label>
    <type>TextArea</type>
</CustomField>