force-app/main/default/objects/Account/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <inlineHelpText>This Partner Org&#39;s Federal Tax ID (EIN) Number.</inlineHelpText>
    <label>Tax ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>