force-app/main/default/objects/Account/validationRules/Tax_ID_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_ID_Format_Validation</fullName>
    <active>true</active>
    <description>Validates that a custom text field called Tax ID is formatted 99-9999999 number format.</description>
    <errorConditionFormula>NOT(
OR(
ISBLANK(Tax_ID__c), 
REGEX(Tax_ID__c, &quot;[0-9]{2}-[0-9]{7}&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Tax_ID__c</errorDisplayField>
    <errorMessage>Tax ID must be in format 99-9999999</errorMessage>
</ValidationRule>